--- a/cipher-cli.cabal
+++ b/cipher-cli.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Cipher
       Lib
   other-modules:
       Paths_cipher_cli
@@ -50,11 +51,14 @@ test-suite cipher-cli-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      CipherSpec
       Paths_cipher_cli
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , cipher-cli
+    , hspec
   default-language: Haskell2010
