--- a/package.yaml
+++ b/package.yaml
@@ -1,22 +1,15 @@
 name:                cipher-cli
 version:             0.0.0.1
-github:              "githubuser/cipher-cli"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2020 Author name here"
+github:              "Vincibean/cipher-cli"
+license:             GPLv3
+author:              "Vincibean"
+maintainer:          "sepensi@gmail.com"
+copyright:           "2020 Vincibean"
 
 extra-source-files:
 - README.md
 - ChangeLog.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/githubuser/cipher-cli#readme>
 
 dependencies:
