--- a/cipher-cli.cabal
+++ b/cipher-cli.cabal
@@ -5,14 +5,14 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           cipher-cli
-version:        0.1.0.0
+version:        0.0.0.1
 description:    Please see the README on GitHub at <https://github.com/githubuser/cipher-cli#readme>
-homepage:       https://github.com/githubuser/cipher-cli#readme
-bug-reports:    https://github.com/githubuser/cipher-cli/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2020 Author name here
-license:        BSD3
+homepage:       https://github.com/Vincibean/cipher-cli#readme
+bug-reports:    https://github.com/Vincibean/cipher-cli/issues
+author:         Vincibean
+maintainer:     sepensi@gmail.com
+copyright:      2020 Vincibean
+license:        GPL-3
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/cipher-cli
+  location: https://github.com/Vincibean/cipher-cli
 
 library
   exposed-modules:
